# keyframe-blogger

./: .env.example  .gitignore  BLOG_PROMPT.md  LICENSE  PLAN.md  README.md  create_visual_summary.py  extract_frames.py  process_with_ai.py  pyproject.toml  transcribe_from_gcs.py  transcribe_video.py  transcribe_video_gcs.py  transcribe_video_simple.py  transcribe_with_genai.py
.specstory/history/: .history.json  2025-07-10_21-46-52Z-i-need-a-venv.md  2025-07-10_21-47-24Z-i-need-a-venv.md  2025-07-10_21-51-08Z-activate-venv.md  2025-07-10_21-51-11Z-activate-venv.md  2025-07-10_23-43-52Z-bash-input-pwd-bash.md  2025-07-11_00-01-50Z-we-re-going-to.md  2025-07-14_13-17-14Z-ok-we-have-a.md  2025-07-14_15-00Z-create-a-gitignore-for-project-files.md  2025-07-14_20-30Z-brainstorm-new-product-names.md  2025-07-14_20-39Z-reconnect-local-and-remote-git-repositories.md  2025-07-14_20-58-30Z-we-renamed-this-project.md  2025-07-14_21-37Z-add-note-to-readme-with-icon.md
scripts/: create_visual_summary.py  extract_frames.py  process_with_ai.py
