[tool.poetry]
name = "keyframe-blogger"
version = "0.1.0"
description = "Convert instructional videos into blog posts by extracting key frames and using AI for content generation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-aiplatform = "^1.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract-frames = "scripts.extract_frames:main"
create-visual-summary = "scripts.create_visual_summary:main"
process-with-ai = "scripts.process_with_ai:main" 